<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/no_returns_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/background_default"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/placeholder_icon_width"
            android:layout_height="@dimen/placeholder_icon_height"
            android:layout_gravity="center"
            android:visibility="@integer/no_items_placeholder_icon_visibility"
            android:src="@drawable/ic_return_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/welcome_to_my_returns"
            android:textSize="@dimen/text_size_headline1" />

        <TextView
            fontPath="@string/font_app_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_button_height"
            android:layout_marginTop="10dp"
            android:paddingBottom="@dimen/default_button_height"
            android:text="@string/you_currently_do_not_have_any_returns"
            android:textColor="@color/text_extra_light"
            android:textSize="@dimen/text_size_headline3" />

    </LinearLayout>
</RelativeLayout>
