<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/add_new_address_toolbar"
        layout="@layout/partial_toolbar_arrow" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/row_new_address_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controller_address_save_button"
        android:layout_below="@+id/add_new_address_toolbar"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default_half"
            android:orientation="vertical">

            <TextView
                fontPath="@string/font_app_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default_half"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/enter_address_details"
                android:textColor="@color/text_medium"
                android:textSize="@dimen/text_size_caption2" />

            <LinearLayout
                android:id="@+id/row_new_address_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/controller_address_save_button"
        style="@style/DDButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/save_details" />

</RelativeLayout>